--- a/meinian_mobile_web/src/main/resources/redis.properties
+++ b/meinian_mobile_web/src/main/resources/redis.properties
@@ -10,6 +10,7 @@ redis.pool.maxWait=300
 #\u683C\u5F0F\uFF1Aredis://:[\u5BC6\u7801]@[\u670D\u52A1\u5668\u5730\u5740]:[\u7AEF\u53E3]/[db index]
 #redis.uri = redis://:12345@127.0.0.1:6379/0
 
-redis.host=192.168.8.8
+redis.host=101.33.206.5
+redis.password=ZHYu12Net..
 redis.port=6379
 redis.timeout=30000
