--- a/meinian_mobile_web/src/main/resources/redis.properties
+++ b/meinian_mobile_web/src/main/resources/redis.properties
@@ -11,6 +11,6 @@ redis.pool.maxWait=300
 #redis.uri = redis://:12345@127.0.0.1:6379/0
 
 redis.host=101.33.206.5
-redis.password=ZHYu12Net..
+redis.password=Zhy
 redis.port=6379
 redis.timeout=30000
